working on dahboard buttons

--- a/src/components/Banner/styles/banner.css
+++ b/src/components/Banner/styles/banner.css
@@ -134,48 +134,9 @@
   }
 }
 
-.bannerButtons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  grid-gap: 1em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.bannerButtons button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  font-weight: 500;
-  border-radius: 0.3vw;
-  padding: 0.5rem 2rem 0.5rem 2rem;
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center !important;
-      -ms-flex-align: center !important;
-          align-items: center !important;
-  grid-gap: 0.5em;
-  font-size: 1em;
-  color: white;
-  background: var(--bg);
-  text-transform: uppercase;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.bannerButtons button:hover {
-  color: black;
-  background: #f2f2f2;
-}
-
 .animatedBanner {
-  -webkit-animation: backgroundMove 5s ease-in-out infinite alternate, fadeIn 1000ms ease-in-out !important;
-          animation: backgroundMove 5s ease-in-out infinite alternate, fadeIn 1000ms ease-in-out !important;
+  -webkit-animation: backgroundMove 7500ms ease-in-out infinite alternate, fadeIn 1000ms ease-in-out !important;
+          animation: backgroundMove 7500ms ease-in-out infinite alternate, fadeIn 1000ms ease-in-out !important;
 }
 
 .scrolledBanner {
