--- a/src/components/Dashboard/styles/dashboard.scss
+++ b/src/components/Dashboard/styles/dashboard.scss
@@ -112,6 +112,57 @@
   }
 }
 
+.buttons {
+  display: flex;
+  grid-gap: 1em;
+  transition: var(--transition);
+  button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    border-radius: 0.3vw;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+    display: flex !important;
+    justify-content: center;
+    align-items: center !important;
+    grid-gap: 0.5em;
+    font-size: 1em;
+    color: black;
+    background: #f2f2f2;
+    text-transform: uppercase;
+    transition: var(--transition);
+    &:hover {
+      color: white;
+      background: var(--bg);
+    }
+  }
+}
+
+.list {
+  position: relative !important;
+  transition: var(--transition) !important;
+}
+
+.listItems {
+  color: white;
+  top: -10px;
+  left: -5px;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  font-family: montserrat;
+  font-weight: 500;
+  font-size: 0.69em;
+  width: 19.5px;
+  height: 19.5px;
+  padding: 0.5em;
+  border-radius: 100%;
+  background: var(--mainGlass);
+  transition: var(--transition) !important;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -156,50 +207,16 @@ ul {
   }
   li {
     transition: var(--transition) !important;
-    .modalButton {
-      display: flex;
-      width: 100%;
-      justify-content: space-between;
-      align-items: center;
-      height: 100%;
-      grid-gap: 1em;
+    .buttonText {
+      // display: none;
       transition: var(--transition) !important;
-      .buttonText {
-        // display: none;
-        transition: var(--transition) !important;
-      }
     }
   }
 }
 
-ul.buttons {
+ul.dash {
   grid-gap: 0.325em;
   transition: var(--transition) !important;
-}
-
-.list {
-  position: relative !important;
-  transition: var(--transition) !important;
-  .listItems {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: montserrat;
-    font-weight: 500;
-    font-size: 0.69em;
-    width: 19.5px;
-    height: 19.5px;
-    padding: 0.5em;
-    border-radius: 100%;
-    background: var(--mainGlass);
-    transition: var(--transition) !important;
-  }
-  &::before {
-    transition: var(--transition) !important;
-  }
 }
 
 .iconButton {
@@ -224,13 +241,13 @@ ul.buttons {
     }
   }
   &:hover {
+    background: var(--mainGlass);
     .listIcon {
       .indexCircle {
         color: var(--main);
         background: var(--secondary) !important;
       }
     }
-    background: var(--mainGlass);
   }
 }
 
