--- a/src/components/Movie/styles/movie.scss
+++ b/src/components/Movie/styles/movie.scss
@@ -4,8 +4,81 @@
   object-fit: cover !important;
   max-height: 250px !important;
   max-width: 165px !important;
+  color: var(--silver);
   transition: var(--transition) !important;
-  .bannerButtons {
+  .overlay {
+    height: 20%;
+    opacity: 1;
+    z-index: 1;
+    padding: 1em 1.5em;
+    font-size: 0.75em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0 auto;
+    object-fit: cover !important;
+    max-height: 250px !important;
+    max-width: 165px !important;
+    width: 100% !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: left !important;
+    background: var(--blackGlass);
+    backdrop-filter: blur(5px);
+    transition: var(--transition);
+    .titleData {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      max-height: 30px;
+      justify-content: space-between;
+      grid-gap: 0.5em;
+      h2 {
+        width: 100% !important;
+        font-weight: 700 !important;
+        font-size: 1.04em !important;
+        margin: 0 !important;
+        padding: 0 !important;
+      }
+      // clip-path: polygon(105% 0%, 105% 30px, 0% 30px, 0% 0%);
+      transition: var(--transition);
+      .data {
+        height: 100%;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        text-align: right;
+        font-weight: 500;
+        animation: fadeIn 100ms ease-in-out;
+        transition: var(--transition);
+        span {
+          display: flex;
+          grid-gap: 0.5em;
+          align-items: center;
+          justify-content: flex-end;
+          text-align: right;
+          font-size: 0.85em;
+          font-weight: 700 !important;
+          i {
+            font-size: 0.8em;
+            color: var(--mainGlass);
+            transition: var(--transition);
+          }
+        }
+      }
+    }
+    .movieDescription {
+      opacity: 0;
+      font-size: 0.965em;
+      font-weight: 600;
+      animation: fadeIn var(--transition);
+    }
+  }
+
+  .buttons {
     opacity: 0;
     padding: 0.75em 1em !important;
     grid-gap: 0.5em !important;
@@ -34,6 +107,7 @@
   }
   // Hover Movie
   &:hover {
+    color: white;
     transform: scale(1.08);
     .overlay {
       opacity: 1 !important;
@@ -45,101 +119,17 @@
         clip-path: none !important;
         padding: 1em 0 !important;
         max-height: none !important;
-        .movieIcon {
-          opacity: 0 !important;
-          display: none !important;
+        i {
+          color: var(--main) !important;
         }
       }
       .movieDescription {
         transform: scale(0.92) !important;
         opacity: 1 !important;
       }
-      .bannerButtons {
+      .buttons {
         transform: scale(0.99) !important;
         opacity: 1;
-        button {
-          &:hover {
-          }
-        }
-      }
-    }
-  }
-}
-
-.overlay {
-  height: 20%;
-  opacity: 1;
-  z-index: 1;
-  padding: 1em 1.5em;
-  font-size: 0.75em;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin: 0 auto;
-  object-fit: cover !important;
-  max-height: 250px !important;
-  max-width: 165px !important;
-  width: 100% !important;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  text-align: left !important;
-  background: var(--blackGlass);
-  backdrop-filter: blur(5px);
-  transition: var(--transition);
-  .movieIcon {
-    opacity: 1;
-    display: inline-block;
-    animation: fadeIn var(--transition);
-    transition: var(--transition);
-  }
-  i {
-    font-size: 0.8em;
-    color: var(--main);
-    transition: var(--transition);
-  }
-  h2 {
-    width: 100%;
-    font-size: 0.965em;
-    margin: 0 !important;
-    padding: 0 !important;
-    text-align: left;
-    transition: var(--transition);
-  }
-  .movieDescription {
-    opacity: 0;
-    font-size: 0.965em;
-    animation: fadeIn var(--transition);
-    transition: var(--transition);
-  }
-  .titleData {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    max-height: 30px;
-    justify-content: space-between;
-    grid-gap: 0.5em;
-    // clip-path: polygon(105% 0%, 105% 30px, 0% 30px, 0% 0%);
-    transition: var(--transition);
-    .data {
-      height: 100%;
-      flex-direction: column;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      text-align: right;
-      font-weight: 500;
-      animation: fadeIn 100ms ease-in-out;
-      transition: var(--transition);
-      span {
-        display: flex;
-        grid-gap: 0.5em;
-        align-items: center;
-        justify-content: flex-end;
-        text-align: right;
-        font-size: 0.85em;
-        transition: var(--transition);
       }
     }
   }
