--- a/src/components/TopButton/styles/topButton.scss
+++ b/src/components/TopButton/styles/topButton.scss
@@ -19,7 +19,7 @@ body {
   border: none !important;
   color: var(--silver);
   cursor: pointer;
-  padding: 10px 15px;
+  padding: 10px 15px !important;
   border-radius: 7px;
   font-size: 20px;
   font-family: "montserrat" !important;
